Added some fancy buttons to make project prettier. This took too long to work properly.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
         <title>Etch-a-sketch</title>
     </head>
     <body>
-        <div id="main-container"></div>
+        <div id="main-container">
+            <div id="device">
+                <div id="screen"></div>
+                <div id="button-container">
+                    <label class="switch">
+                        <input type="checkbox" />
+                        <span class="slider"></span>
+                    </label>
+                    <label class="switch">
+                        <input type="checkbox" />
+                        <span class="slider"></span>
+                    </label>
+                </div>
+            </div>
+        </div>
     </body>
     <script src="script.js"></script>
 </html>
