Added brush/eraser switch functionality and added some styles to make things prettier.

--- a/index.html
+++ b/index.html
@@ -11,14 +11,26 @@
             <div id="device">
                 <div id="screen"></div>
                 <div id="button-container">
-                    <label class="switch">
-                        <input type="checkbox" />
-                        <span class="slider"></span>
-                    </label>
-                    <label class="switch">
-                        <input type="checkbox" />
-                        <span class="slider"></span>
-                    </label>
+                    <div id="left-container">
+                        <div id="brush-eraser" class="button-box">
+                            Brush
+                            <label class="switch">
+                                <input type="checkbox" />
+                                <span class="slider"></span>
+                            </label>
+                            Eraser
+                        </div>
+
+                        <div class="button-box">
+                            Grid ON
+                            <label class="switch">
+                                <input type="checkbox" />
+                                <span class="slider"></span>
+                            </label>
+                            Grid OFF
+                        </div>
+                    </div>
+                    <div id="right-container"></div>
                 </div>
             </div>
         </div>
