--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                             Eraser
                         </div>
 
-                        <div class="button-box">
+                        <div id="grid-on-off" class="button-box">
                             Grid ON
                             <label class="switch">
                                 <input type="checkbox" />
