Fixed problem with hover effects when turning off grid. Added reset button functioanlity.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
                             Grid OFF
                         </div>
                     </div>
-                    <div id="right-container"></div>
+                    <div id="right-container">
+                        <button id="reset-button">RESET</button>
+                    </div>
                 </div>
             </div>
         </div>
