--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                     </div>
                 </div>
             </div>
+            <div class="footer">
+                Developed by brenobmac, with help from The Odin Project
+            </div>
         </div>
     </body>
     <script src="script.js"></script>
